--- a/css/_modal.scss
+++ b/css/_modal.scss
@@ -24,7 +24,7 @@
 
   .navbar {
     position: fixed;
-    top: -5rem;
+    top: -7rem;
     background: #112240;
     box-shadow: 0 1rem 2.5rem -1px rgb(0 0 0 / 10%);
     padding: 1.5rem;
